# dbt_stack

./: .gitignore  README.md  pyproject.toml
app/: .env_example  create_data.py
pg_stagings/: dbt_project.yml
pg_stagings/models/: schema.yml  transform_customers.sql
