[tool.poetry]
name = "dbt-stack"
version = "0.1.0"
description = "Pacote de bibliotecas para geracao de dados e manipulacao com dbt"
authors = ["Nicolini <nicolini.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
faker = "^28.4.1"
dbt-core = "^1.8.6"
dbt-postgres = "^1.8.2"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
